@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-14T02:23:31Z",
-  "count_outdated" : 451,
-  "uniques_outdated" : 42,
+  "timestamp" : "2022-08-21T16:30:54Z",
+  "count_outdated" : 526,
+  "uniques_outdated" : 43,
   "count" : 633,
   "uniques" : 49,
   "views" : [
-    {
-      "timestamp": "2022-08-07T00:00:00Z",
-      "count": 75,
-      "count_minmax": [ 75, 75 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 1,
