@@ -1,12 +1,7 @@
 {
-  "count": 182,
+  "count": 107,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-08-07T00:00:00Z",
-      "count": 75,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 1,
